fix: added overflow-y to sidebar

--- a/src/app/pages/commits-page/commits-page.component.scss
+++ b/src/app/pages/commits-page/commits-page.component.scss
@@ -39,7 +39,7 @@
         float: left;
         height: calc(100vh - 60px);
         margin-top: 60px;
-        position: fixed;
+        overflow-y: auto;
       }
       
       .content {
